--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>Ram & Antara getting hitched!</title>
+    <title>Boda Hawaiana!</title>
     <meta name="description" content="We would like to invite you to our big day.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
@@ -116,10 +116,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3>We are getting hitched</h3>
-                <p>The dates are 27<sup>th</sup> & 28<sup>th</sup> of November '17 and we would like you to be a part of
-                    it.</p>
-                <div class="share-bar"></div>
+				<h2>13 de septiembre de 2025</h2>
+                <h3>Una boda donde no están permitidos trajes ni vestidos caros. 🩴🍹</h3>
             </div>
         </div>
     </div>
@@ -129,19 +127,22 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">How we met</h3>
+                <h3 class="header">De qué va todo esto</h3>
             </div>
         </div>
         <div class="row">
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div>
             <div class="col-md-6">
-                <p>
-                    I first saw Antara in the Fall of 2008 when we started our undergrad. I was instantly attracted to
-                    her but was far too nervous to speak to her. I had told my friend I liked her and news had traveled
-                    fast and she soon found out. Her first reaction was "Who is Ram?" and she began searching for me in
-                    the class. She started to take notice of me and no matter how boring the lecture was, we never
-                    missed a class after that. After a good few months I finally plucked up the courage to ask her out
-                    and the rest is history :)
+                <p><p>Sabemos que esperábais lágrimas, anillos y un ramo volando por los aires... pero no. Ya nos conocéis: no nos gustan los dramas ni las formalidades, pero sí el cachondeo. Así que preparaos para una <strong>ceremonia hawaiana</strong> con un "sacerdote" que tiene más experiencia haciendo chistes malos que casando a parejas.</p>
+
+<h2>Reglas básicas para esta fiesta:</h2>
+<ol>
+    <li>NO es una boda tradicional. No están permitidos ni trajes, ni vestidos de gala, ni zapatos que hagan más ruido que los cocos chocando. Aquí se viene en chanclas, con camisas de flores o incluso bañador (sí, tenemos piscina y lo vamos a usar como excusa).</li>
+    <li>No hace falta que traigáis regalos, pero si venís con buen rollo y ganas de pasarlo bien, será el mejor regalo de todos.</li>
+    <li>Esto no es una boda clásica; es una fiesta tropical con amor como pretexto. Así que prepárense para el hula, las piñas coladas, y quizá algún chapuzón inesperado.</li>
+</ol>
+
+<p>Este día será puro "Aloha" y queremos que lo vivan con nosotros. ¡Nos vemos bajo las palmeras (o las sombrillas)! 🌴🍍🍹</p>
                 </p>
             </div>
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div>
@@ -157,7 +158,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h3 class="header">Events</h3>
+                <h3 class="header">Dónde será esto</h3>
             </div>
         </div>
         <div class="row">
