--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-				<h2>13 de septiembre de 2025</h2>
-                <h3>Una boda donde no están permitidos trajes ni vestidos caros. 🩴🍹</h3>
+				<h1>13 de septiembre de 2025</h1>
+                <h2>Una boda donde no están permitidos trajes ni vestidos caros. 🩴🍹</h2>
             </div>
         </div>
     </div>
@@ -135,15 +135,15 @@
             <div class="col-md-6">
                 <p><p>Sabemos que esperábais lágrimas, anillos y un ramo volando por los aires... pero no. Ya nos conocéis: no nos gustan los dramas ni las formalidades, pero sí el cachondeo. Así que preparaos para una <strong>ceremonia hawaiana</strong> con un "sacerdote" que tiene más experiencia haciendo chistes malos que casando a parejas.</p>
 
-<h2>Reglas básicas para esta fiesta:</h2>
-<ol>
+                <hr><h4>Reglas básicas para esta fiesta:</h4>
+<ol class="reglas">
     <li>NO es una boda tradicional. No están permitidos ni trajes, ni vestidos de gala, ni zapatos que hagan más ruido que los cocos chocando. Aquí se viene en chanclas, con camisas de flores o incluso bañador (sí, tenemos piscina y lo vamos a usar como excusa).</li>
     <li>No hace falta que traigáis regalos, pero si venís con buen rollo y ganas de pasarlo bien, será el mejor regalo de todos.</li>
     <li>Esto no es una boda clásica; es una fiesta tropical con amor como pretexto. Así que prepárense para el hula, las piñas coladas, y quizá algún chapuzón inesperado.</li>
 </ol>
 
 <p>Este día será puro "Aloha" y queremos que lo vivan con nosotros. ¡Nos vemos bajo las palmeras (o las sombrillas)! 🌴🍍🍹</p>
-                </p>
+            
             </div>
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div>
         </div>
@@ -158,7 +158,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h3 class="header">Dónde será esto</h3>
+                <h3 class="header">Dónde será</h3>
             </div>
         </div>
         <div class="row">
