--- a/index.html
+++ b/index.html
@@ -72,14 +72,13 @@
                 <div class="header-nav">
                     <nav>
                         <ul class="primary-nav">
-                            <li><a href="#intro">Cómo nos conocimos</a></li>
-                            <li><a href="#events">Eventos</a></li>
-                            <li><a href="#instagram">Instagram</a></li>
-                            <li><a href="#eng-pics">Compromiso</a></li>
-                            <li class="hidden-sm hidden-xs"><a href="#video-bg">Un vistazo a la ciudad</a></li>
+                            <li><a href="#intro">Info</a></li>
+                            <li><a href="#dress-code">Vestimenta</a></li>
+                            <li><a href="#gifts">Regalos</a></li>
+							<li><a href="#wedshoot">Wedshoot</a></li>
                         </ul>
                         <ul class="member-actions">
-                            <li><a href="#map" class="login">Lugar</a></li>
+                            <li><a href="#events" class="login">Ubicación</a></li>
                             <li><a href="#rsvp" class="btn-white btn-small">Confirma tu asistencia</a></li>
                         </ul>
                     </nav>
@@ -167,17 +166,33 @@
 	<div class="row align-items-center">
 		<div class="col-md-6 text-center left-column-content">
 			<h2 class="fecha-linea">13 de septiembre</h2>
-			<h3 class="hora-linea">12:00h</h3>
-			<p class="lugar-linea">📍 La casita de Pinto</p>
+			<h3 class="hora-linea">13:00h - 23:59h</h3>
+			<h4>La ceremonia</h4>
+			<p class="lugar-linea"> <img src="img/location-icon.png" alt="Icono de Ubicación" class="location-icon"> La casita de Pinto</p>
+			<h3 class="hora-linea">00:00h</h3>
+			<h4>Post-party</h4>
+			<p class="lugar-linea"> <img src="img/location-icon.png" alt="Icono de Ubicación" class="location-icon"><i>Por definir</i></p>
 		</div>
 		<div class="col-md-6 text-center">
 			<h4>CÓMO LLEGAR</h4>
 			<p class="Comollegar">- Si tenéis coche, motillo, cualquier otro vehículo o algún buen amigo conductor, podéis ir directamente al lugar de la celebración.
-				<br>
+				<br><br>
 				- Si por el contrario no podéis ir por vuestra cuenta o queréis ser libres de beber alcohol sin responsabilidad, podéis ir en transporte público hasta Pinto, y ahí os recogeremos en una fragoneta, no nos da para más el presupuesto, que nos lo hemos gastado todo en la luna de miel.</p>
 		</div>
 	</div>
     </div>
+	   <div class="container">
+            <div class="col-md-4 col-md-offset-2 text-center">
+                 <div id="add-to-cal" data-add-to-calendar-button >
+                   </div>
+            </div>
+            <div class="col-md-4 text-center">
+                <a href="#rsvp" class="btn btn-fill btn-small">
+                    Confirma tu asistencia
+                </a>
+            </div>
+
+	 </div>
         <div class="row">
            <div class="col-md-12 map-full-width-iframe">
                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!3d3046.3219697007476!2d-3.7316635878825157!3d40.224142967218555!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd421f006aec1e79%3A0xfa9ea4acc44120a7!2sLa%20Casita%20de%20Pinto%20%7C%20local%20para%20fiestas!5e0!3m2!1ses!2ses!4v1737363581597!5m2!1ses!2ses"
@@ -190,28 +205,18 @@
 
            </div>
         </div>
-   <div class="container">
-        <div class="row section-padding">
-            <div class="col-md-4 col-md-offset-2 text-center">
-                 <div id="add-to-cal" data-add-to-calendar-button >
-                   </div>
-            </div>
-            <div class="col-md-4 text-center">
-                <a href="#rsvp" class="btn btn-fill btn-small">
-                    Confirma tu asistencia
-                </a>
-            </div>
-        </div>
+
+	<div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <a href="https://www.google.com/maps?q=40.2244,-3.7070" class="btn btn-fill btn-small" target="_blank">
+                <a href="https://maps.app.goo.gl/68B6vxF5oqRxgAp89" class="btn btn-fill btn-small" target="_blank">
                     <i class="fa fa-map-marker"></i>  Ver en Google Maps
                 </a>
             </div>
         </div>
     </div>
 
-    </div>
+   
 </section>
 
 
