--- a/index.html
+++ b/index.html
@@ -250,26 +250,26 @@
         </div>
          <div class="row">
             <div class="col-md-12 text-center">
-                <h4>Paleta de Colores</h4>
-				<div class="color-palette-container">
-					  <div class="color-palette-column">
-						  <h5><i class="fa fa-check-circle"></i> Colores Permitidos</h5>
-						   <ul class="color-palette allowed-colors">
-							  <li style="background-color:#f9e79f"></li>
-							  <li style="background-color:#76d7c4"></li>
-							  <li style="background-color:#f1948a"></li>
-							  <li style="background-color:#aed6f1"></li>
-							  <li style="background-color:#f8c471"></li>
-						   </ul>
-                          <p class="color-palette-description">Estos colores te darán un look festivo y playero.</p>
-					  </div>
-					   <div class="color-palette-column">
-						  <h5><i class="fa fa-times-circle"></i> Colores NO Permitidos</h5>
-						  <ul class="color-palette not-allowed-colors">
-							  <li style="background-color:#ffffff"></li>
-							  <li style="background-color:#d3d3d3"></li>
-							  <li style="background-color:#000000"></li>
-						   </ul>
+                <h4 class="color-palette-title">Paleta de Colores</h4>
+                <div class="color-palette-container">
+                    <div class="color-palette-column">
+                        <h5><i class="fa fa-check-circle"></i> Colores Permitidos</h5>
+                        <ul class="color-palette allowed-colors">
+                            <li style="background-color:#f9e79f"></li>
+                            <li style="background-color:#76d7c4"></li>
+                            <li style="background-color:#f1948a"></li>
+                            <li style="background-color:#aed6f1"></li>
+                            <li style="background-color:#f8c471"></li>
+                        </ul>
+                        <p class="color-palette-description">Estos colores te darán un look festivo y playero.</p>
+                    </div>
+                    <div class="color-palette-column">
+                        <h5><i class="fa fa-times-circle"></i> Colores NO Permitidos</h5>
+                        <ul class="color-palette not-allowed-colors">
+                            <li style="background-color:#ffffff"></li>
+                            <li style="background-color:#d3d3d3"></li>
+                            <li style="background-color:#000000"></li>
+                        </ul>
                         <p class="color-palette-description">Estos colores pueden desentonar, y los novios irán de blanco.</p>
 					  </div>
                 </div>
@@ -321,7 +321,7 @@
                  <div class="form-input-group">
                     <i class="fa fa-key"></i>
                     <input type="number" name="invite_code" id="invite_code" class="" min="0"
-                    placeholder="Código de invitación (te lo hemos enviado junto a la invitación)" required>
+                    placeholder="Código de invitación" required>
                  </div>
                </div>
            </div>
@@ -539,7 +539,7 @@
             <div class="col-md-6 text-center">
                 <h4>Descarga la app WedShoots</h4>
                 <div class="app-download-container">
-                    <p>Si prefieres usar la app WedShoots, descárgala desde aquí:</p>
+                    <p>En primer lugar necesitas la app WedShoots, descárgala desde aquí:</p>
                     <div class="app-buttons-container">
                          <a href="https://app.appsflyer.com/net.bodas.android.wedshoots?pid=WP-Android-ES&c=WP-ES-LANDINGS"
                            target="_blank" class="app-button">
@@ -570,7 +570,7 @@
         <div class="row">
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
-                <p>""<span class="fa fa-heart pulse2"></span>""</p>
+                <p>Os esperamos  <span class="fa fa-heart pulse2"></span></p>
             </div>
         </div>
     </div>
